# webserv

./: CGI.cpp  CGI.hpp  CMakeLists.txt  Conf.cpp  Conf.hpp  Info  Makefile  Position.cpp  Position.hpp  README.md  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  Utils.cpp  Utils.hpp  Web.cpp  Web.hpp  a.out  desc2.txt  description  main.cpp  tests.txt  webserv
Config/: Config.cpp  Config.hpp
Request/: Request.cpp  Request.hpp
Utils/: Utils.cpp  Utils.hpp
Webserv/: Client.cpp  Client.hpp  Webserv.cpp  Webserv.hpp  initialize.cpp  utils.cpp
cgi-bin/: a.out  main  main.cpp  tester.cpp
config/: .htpasswd  default.cfg  default.conf  localhost.cfg  localhost.conf  school_21_test.cfg  webserv.cfg
get_next_line/: get_next_line.cpp  get_next_line.hpp  get_next_line_utils.cpp
headers/: RequestHeaders.cpp  RequestHeaders.hpp  ResponseHeaders.cpp  ResponseHeaders.hpp  defines.hpp
includes/: Client.hpp  Config.hpp  Webserv.hpp
src/: Client.cpp  Client.hpp  Config.cpp  Config.hpp  Request.hpp  RequestHeader.cpp  RequestHeader.hpp  Server.cpp  Server.hpp  Utils.cpp  Utils.hpp  Webserv.cpp  Webserv.hpp
srcs/: Cgi.cpp  Cgi.hpp  Client.cpp  Client.hpp  Config.cpp  Config.hpp  HTTP.cpp  HTTP.hpp  HandlerMethods.cpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  Utils.cpp  Utils.hpp  Webserv.cpp  Webserv.hpp  a.out  main.cpp
www/en/: index.html
www/localhost/: index.html  main.html  post 2.html  post.html  stylesheet.css
www/localhost/errorPages/: 404.html
www/ru/: index.html
